# zdppy_yaml

./: .gitignore  README.md  pyproject.toml
examples/zdppy_yaml/: z01_读写配置.py
examples/zdppy_yaml/config/: config.yaml  zdppy_yaml_config.yaml
examples/zdppy_yaml/config/secret/: .config.yaml
zdppy_yaml/: __init__.py  zdppy_yaml.py
