[tool.poetry]
name = "zdppy_yaml"
version = "0.1.1"
description = "Python读取yaml配置，无任何依赖，符合中国人使用习惯"
authors = ["zhangdapeng <pygosuperman@outlook.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zhangdapeng520/zdppy_yaml"
repository = "https://github.com/zhangdapeng520/zdppy_yaml"
keywords = ["poetry", "zhangdapeng", "zhangdapeng520", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
]
include = [
    "LICENSE",
    "README.md",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
